# mobibot

./: .aiignore  .gitignore  LICENSE  README.md  pyproject.toml
containers/calibre/: Dockerfile
containers/clip_select/: Dockerfile  select_screenshots.py
containers/cosyvoice/: Dockerfile  cli.py
containers/djvu/: Dockerfile
containers/fasttext/: Dockerfile  app.py
containers/ffmpeg/: Dockerfile
containers/languagetool/: Dockerfile
containers/ollama/: Dockerfile
containers/pandoc/: Dockerfile
containers/poppler/: Dockerfile  pdf_to_png_par.sh
containers/pymorphy3/: Dockerfile  entrypoint.py
containers/readability/: Dockerfile  server.js
containers/silero_tts/: Dockerfile  requirements.txt  tts_md_to_audio.py
containers/tiktoken/: Dockerfile  app.py  requirements.txt
containers/wespeaker/: Dockerfile  run_wespeaker.py
containers/whisperx/: Dockerfile  load_align_model.py
containers/yt_dlp/: Dockerfile
src/: cli.py  config.py  logging_setup.py  pipeline.py  router.py
src/controllers/: longread.py  pdf.py  video.py
src/helpers/: filepath_helper.py  grammar_helper.py  html_helper.py  http_helper.py  latex_helper.py  markdown_helper.py  text_helper.py
src/loaders/: html_loader.py  longread_loader.py  media_loader.py  yt_dlp_loader.py
src/models/: video_models.py
src/wrappers/: calibre_wrapper.py  clip_select_wrapper.py  cosyvoice_wrapper.py  djvu_wrapper.py  docker_config_wrapper.py  docker_wrapper.py  fasttext_wrapper.py  ffmpeg_wrapper.py  language_tool_wrapper.py  ollama_wrapper.py  pandoc_wrapper.py  pillow_wrapper.py  (+6 more)
